fix menu alignment

--- a/packages/design-system/theme/src/menu.scss
+++ b/packages/design-system/theme/src/menu.scss
@@ -18,10 +18,6 @@
 	white-space: nowrap;
 	border-radius: var.$menu-item-border-radius;
 
-	* {
-		vertical-align: middle;
-	}
-
 	i {
 		color: var(--color-text-light);
 	}
